[metadata]
name = spark_learn
version = 0.0.0
description = Messing around with Spark and Delta Lake
long_description = file: README.md

[options]
include_package_data = True
packages = find_namespace:
install_requires =
  pyspark==3.2.0
  delta-spark==1.1.0

[options.extras_require]
dev =
  black==20.8b1
  pytest
  flake8
  mypy
  pytest-watch
